fix getlist
